<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.upcoming_series.MainActivity">


    <ScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/suas_series"
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_gravity="center_vertical|top"
                android:text="@string/suas_series"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#ffffff"
                android:textColorLink="#ffffff"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="102dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtSerie1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fon"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textColor="#Ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/opcoes_serie1"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/epsodios"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/opcao_sr1"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/opcoes"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
